oxiplate-derive/tests/broken/strings/concat-all-types-span.stderr
error[E0609]: no field `foo` on type `&Data`
 --> tests/broken/strings/concat-all-types-span.rs:6:5
  |
6 |     foo
  |     ^^^ unknown field

error[E0308]: mismatched types
  --> tests/broken/strings/concat-all-types-span.rs:6:5
   |
 6 | /     foo
 7 | |     ~ 'a' ~ '\n' ~ '\r' ~ '\t' ~ '\0' ~ '\\' ~ '\'' ~ '\"'
 8 | |     ~ "hello world" ~ #"jane "the deer" doe"#
 9 | |     ~ true ~ false
...  |
14 | |     ~ 1_9_e_0_ ~ 19e-1 ~ 19E+1
15 | |     ~ 1_.9_
   | |___________^ expected `usize`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)
